@@ -83,10 +83,10 @@ this repository contains the full copyright notices and license terms. -->
         </record>
 
     </data>
-    <data noupdate="1" grouped="1" skiptest="1">
+    <data noupdate="1" grouped="1">
         <!-- From https://en.wikipedia.org/wiki/Address_(geography) -->
         <record model="party.address.format" id="address_format_be">
-            <field name="country" ref="country.be"/>
+            <field name="country_code">BE</field>
             <field name="format_">${attn}
 ${party_name}
 ${name}
@@ -97,7 +97,7 @@ ${COUNTRY}</field>
 
 
         <record model="party.address.format" id="address_format_fr">
-            <field name="country" ref="country.fr"/>
+            <field name="country_code">FR</field>
             <field name="format_">${party_name}
 ${attn}
 ${name}
@@ -107,7 +107,7 @@ ${COUNTRY}</field>
         </record>
 
         <record model="party.address.format" id="address_format_it">
-            <field name="country" ref="country.it"/>
+            <field name="country_code">IT</field>
             <field name="format_">${party_name}
 ${attn}
 ${name}
@@ -116,29 +116,8 @@ ${zip} ${city} ${SUBDIVISION_CODE}
 ${COUNTRY}</field>
         </record>
 
-        <!-- for Japan language
-        <record model="party.address.format" id="address_format_jp_jp_JP">
-            <field name="country" ref="country.jp"/>
-            <field name="language" ref="ir.lang_jp_JP"/>
-             <field name="format_">${COUNTRY}〒${zip}
-${subdivision}${city}${street}
-${name}
-${party_name}</field>
-        </record>
-        -->
-
-        <!-- for Korean language
-        <record model="party.address.format" id="address_format_kr_kp_KR">
-            <field name="country" ref="country.kr"/>
-            <field name="language" ref="ir.lang_kp_KR"/>
-            <field name="format_">${COUNTRY}
-${subdivision}${city}${street}
-${zip}</field>
-        </record>
-        -->
-
         <record model="party.address.format" id="address_format_es">
-            <field name="country" ref="country.es"/>
+            <field name="country_code">ES</field>
             <field name="format_">${party_name}
 ${street}
 ${zip} ${city}
@@ -147,7 +126,7 @@ ${COUNTRY}</field>
         </record>
 
         <record model="party.address.format" id="address_format_ch">
-            <field name="country" ref="country.ch"/>
+            <field name="country_code">CH</field>
             <field name="format_">${party_name}
 ${street}
 ${zip} ${city}
@@ -156,7 +135,7 @@ ${COUNTRY}</field>
 
 
         <record model="party.address.format" id="address_format_gb">
-            <field name="country" ref="country.gb"/>
+            <field name="country_code">GB</field>
             <field name="format_">${party_name}
 ${street}
 ${CITY}
@@ -165,7 +144,7 @@ ${COUNTRY}</field>
         </record>
 
         <record model="party.address.format" id="address_format_us">
-            <field name="country" ref="country.us"/>
+            <field name="country_code">US</field>
             <field name="format_">${attn}
 ${party_name}
 ${street}
