@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <form>
-    <label name="country"/>
-    <field name="country"/>
+    <label name="country_code"/>
+    <field name="country_code"/>
     <label name="active"/>
     <field name="active"/>
-    <label name="language"/>
-    <field name="language"/>
+    <label name="language_code"/>
+    <field name="language_code"/>
     <separator name="format_" colspan="4"/>
     <field name="format_" colspan="4"/>
 </form>
