@@ -1,3 +1,5 @@
+* Replace country and language in address format by codes
+
 Version 5.2.0 - 2019-05-06
 * Bug fixes (see mercurial logs for details)
 * Remove starting wildcard when searching on codes and numbers
